--- a/AITSurvey/Site.Master
+++ b/AITSurvey/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="AITSurvey.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="AITResearch.SiteMaster" %>
 
 <!DOCTYPE html>
 
